[package]
name = "mine_clone"
version = "0.1.0"
authors = ["xarvic <xarvix@web.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
owning_ref = "0.4"
anyhow = "1.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
itertools = "0.9"
clap = "*"

# Bevy on 13.12.2020
#bevy = {git = "https://github.com/bevyengine/bevy.git", ref = "097a55948cf85aae1c9cd35503155a41e032803e"}

bevy = "0.3.0"
bevy_rapier3d = "0.6.2"

#[profile.release]
#lto = true
#codegen-units = 1
#panic = "abort"