[package]
name = "mine_clone"
version = "0.1.0"
authors = ["xarvic <xarvix@web.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
owning_ref = "0.4"
anyhow = "1.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
itertools = "0.9"
clap = "*"
impl_ops = "0.1"
smallvec = "1.5"

bevy = {git = "https://github.com/bevyengine/bevy.git", ref = "3b2c6ce49b3b9ea8bc5cb68f8d350a80ff928af6"}

#[profile.release]
#lto = true
#codegen-units = 1
#panic = "abort"