[package]
name = "mine_clone"
version = "0.1.0"
authors = ["xarvic <xarvix@web.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["utils"]

[dependencies]
owning_ref = "0.4"
anyhow = "1.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
itertools = "0.9"
clap = "*"
impl_ops = "0.1"
smallvec = "1.5"
rand = "0.8"
utils = {path = "./utils"}

bevy = "0.4.0"
bevy_rapier3d = "0.7.0"

#[profile.release]
#lto = true
#codegen-units = 1
#panic = "abort"